--- a/collabFrontend/WebContent/index.html
+++ b/collabFrontend/WebContent/index.html
@@ -18,11 +18,11 @@
 <script src="c_forum/ForumController.js"></script>
 <script src="c_blog/BlogController.js"></script>
 <script src="c_friend/FriendController.js"></script>
-<script src="c_chat/ChatController.js"></script>
-<script src="c_chat/ChatService.js"></script>
-<script src="assets/js/lodash.js"></script>
+<!-- <script src="c_chat/ChatController.js"></script>
+<script src="c_chat/ChatService.js"></script> -->
+<!-- <script src="assets/js/lodash.js"></script>
 <script src="assets/js/stomp.js"></script>
-<script src="assets/js/sockjs.js"></script>
+<script src="assets/js/sockjs.js"></script> -->
 <script src="c_job/JobController.js"></script>
 <link rel="stylesheet" href="assets/css/formStyle.css" />
 
